add some benchs

--- a/in_forward/receiver.conf
+++ b/in_forward/receiver.conf
@@ -1,8 +1,15 @@
 <source>
   @type forward
   port 24224
+  tag dummer
 </source>
-<match dummy>
-  @type flowcounter_simple
+
+<filter dummer>
+  type flowcounter_simple2
+  unit second
+</filter>
+
+<match dummer>
+  @type null
   unit second
 </match>
