--- a/dummer/dummer.conf
+++ b/dummer/dummer.conf
@@ -1,4 +1,6 @@
 configure 'sample' do
-  output "dummy.log"
+  tag type: :string, value: "dummy"
+  output "/var/log/dummy/dummy.log"
   message "time:2013-11-25 00:23:52 +0900\tlevel:ERROR\tmethod:POST\turi:/api/v1/people\treqtime:3.1983877060667103"
+  workers 3
 end
