--- a/in_forward/receiver.conf
+++ b/in_forward/receiver.conf
@@ -6,6 +6,7 @@
 
 <filter dummer>
   type flowcounter_simple2
+  dump_file_path '/var/log/flunetd_stats/in_forward.json'
   unit second
 </filter>
 
