--- a/receiver/receiver.conf
+++ b/receiver/receiver.conf
@@ -1,5 +1,6 @@
 <source>
   @type flowcounter_simple2
+  dump_file_path '/var/log/flunetd_stats/receiver.json'
   unit second
   port 24224
 </source>
