--- a/out_forward.yml
+++ b/out_forward.yml
@@ -16,5 +16,7 @@ services:
   receiver:
     build: receiver
     image: receiver:1
+    environment:
+      - RATE
     volumes:
       - ./data/out_forward:/var/log/flunetd_stats
